--- a/source/translated/fr/agent.feature.matrix.po
+++ b/source/translated/fr/agent.feature.matrix.po
@@ -1,17 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
+# S_O_M_E DESCRIPTIVE TITLE.
 # Copyright (C) 2012, OpenSVC SARL
 # This file is distributed under the same license as the OpenSVC package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <christophe.varoqui at opensvc.com>, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenSVC 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-01 10:16\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2014-03-03 15:52+01\n"
+"Last-Translator: Christophe Varoqui <christophe.varoqui at opensvc.com>\n"
+"Language-Team: OpenSVC translation team <translation at opensvc.com>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
