--- a/source/translated/fr/contribute.po
+++ b/source/translated/fr/contribute.po
@@ -1,17 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
+# S_O_M_E DESCRIPTIVE TITLE.
 # Copyright (C) 2012, OpenSVC SARL
 # This file is distributed under the same license as the OpenSVC package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <christophe.varoqui at opensvc.com>, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenSVC 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-18 11:41\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2014-03-05 22:37\n"
+"PO-Revision-Date: 2014-03-03 15:52+01\n"
+"Last-Translator: Christophe Varoqui <christophe.varoqui at opensvc.com>\n"
+"Language-Team: OpenSVC translation team <translation at opensvc.com>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,6 +20,11 @@ msgstr ""
 #: ../../contribute.rst:16
 msgid "Clone the appropriate git repository"
 msgstr "Cloner le dépôt git approprié"
+
+# 616f4ca1618a41079ab2596da24890a2
+#: ../../contribute.rst:130
+msgid "Clone the documentation project::"
+msgstr ""
 
 # a2ae97b737b44f72a0e456cd50626df0
 #: ../../contribute.rst:39
@@ -36,13 +41,47 @@ msgstr "MTA local configuré, sans git send-email"
 msgid "Contribute"
 msgstr "Contribution"
 
+# f3873eaef5544a4693125254d0ce48d5
+#: ../../contribute.rst:122
+#, fuzzy
+msgid "Contribute translations"
+msgstr "Contribution"
+
+# 23a75718256d43b99525f14b0c5de356
+#: ../../contribute.rst:166
+msgid "Create or refresh the translation files::"
+msgstr ""
+
+# c5d4875050f8497d851a518b62b4a2c5
+#: ../../contribute.rst:179
+msgid ""
+"Don't forget to create the directory ``source/translated/<your language "
+"code>/LC_MESSAGES/``. Finally, create the .mo (binary translation) and html "
+"files with::"
+msgstr ""
+
+# a321a49f899a4a93b405d7e913a49e86
+#: ../../contribute.rst:126
+msgid "For example, on a debian-based system::"
+msgstr ""
+
+# 2b7ecd427d5e4441b35a9ccd3b34c4b0
+#: ../../contribute.rst:138
+msgid ""
+"If starting a new translation, you have to add the new language support to "
+"the Makefile. Here are for example the definitions for the french "
+"translation you can clone::"
+msgstr ""
+
 # a8c3f40653a14461b17e006c0d712e23
 #: ../../contribute.rst:52
 msgid ""
 "Install :command:`git-send-email`, and :command:`msmtp` if you have to use "
 "Gmail SMTP (no local MTA configured)::"
 msgstr ""
-"Installer la commande :command:`git-send-email`, ainsi que :command:`msmtp` si vous souhaitez utiliser le service SMTP de Gmail (sans MTA local configuré) ::"
+"Installer la commande :command:`git-send-email`, ainsi que :command:`msmtp` "
+"si vous souhaitez utiliser le service SMTP de Gmail (sans MTA local "
+"configuré) ::"
 
 # 13607320e63a40bea26b1760c62332b1
 #: ../../contribute.rst:41
@@ -50,17 +89,30 @@ msgid "Install :command:`git-send-email`::"
 msgstr "Installer la commande :command:`git-send-email` ::"
 
 # 39e1bbfde8964f9eaa5db412fc188169
-#: ../../contribute.rst:87
+#: ../../contribute.rst:89
 msgid ""
 "Install :command:`msmtp` if you have to use Gmail SMTP (no local MTA "
 "configured)::"
 msgstr ""
-"Installer la commande :command:`msmtp` si vous souhaitez utiliser le service SMTP de Gmail (sans MTA local configuré) ::"
+"Installer la commande :command:`msmtp` si vous souhaitez utiliser le service "
+"SMTP de Gmail (sans MTA local configuré) ::"
 
 # f5081a9fb8bc41de82f447da1647fb9b
 #: ../../contribute.rst:7
 msgid "Install git"
 msgstr "Installer git"
+
+# b52a3b5ee3e547a38070e3044da2b5f6
+#: ../../contribute.rst:124
+msgid "Install the sphinx documentation generator."
+msgstr ""
+
+# ece72dbedb964ed8a9e5120117a55bb6
+#: ../../contribute.rst:184
+msgid ""
+"Note you can see what string miss translating in the output of the mo "
+"target. For example::"
+msgstr ""
 
 # 296d15d5f74842eba19654e41225a6f3
 #: ../../contribute.rst:4
@@ -70,8 +122,8 @@ msgid ""
 "http://git.opensvc.com."
 msgstr ""
 "Les projets de OpenSVC sont traqués par le gestionnaire de sources git. La "
-"documentation est également traquée ainsi. Une interface gitweb est disponible "
-"sur http://git.opensvc.com."
+"documentation est également traquée ainsi. Une interface gitweb est "
+"disponible sur http://git.opensvc.com."
 
 # ae9b1dc042a84a5bbfd553622e1dc53f
 #: ../../contribute.rst:31
@@ -86,20 +138,50 @@ msgstr "Envoi de patches"
 # 96585718395e45cbaacf90b48683b3c9
 # eee24fda110d4302aea11bb0ba599c35
 # 1cc1fffe69b84b429672f2069810488f
-#: ../../contribute.rst:45 ../../contribute.rst:80 ../../contribute.rst:110
+#: ../../contribute.rst:45 ../../contribute.rst:82 ../../contribute.rst:114
 msgid "Send patches with::"
 msgstr "L'envoi de patchs se fait par ::"
 
 # 8d450e63b57146b39749046209a40b8c
-#: ../../contribute.rst:76
+#: ../../contribute.rst:78
 msgid "Set up :command:`git-send-email` to use :command:`msmtp`::"
-msgstr "Configurer :command:`git-send-email` pour l'utilisation de :command:`msmtp` ::"
+msgstr ""
+"Configurer :command:`git-send-email` pour l'utilisation de :command:"
+"`msmtp` ::"
 
 # 21aa40c7358948d9a69b6813104fd253
 # 27fda7e570224a56b6e2631b1c302fd7
-#: ../../contribute.rst:57 ../../contribute.rst:91
+#: ../../contribute.rst:57 ../../contribute.rst:93
 msgid "Set up :command:`msmtp`::"
 msgstr "Configuration de :command:`msmtp` ::"
+
+# c70a0d32417649feaaba355cc93e968a
+#: ../../contribute.rst:134
+msgid "Step into the cloned project directory::"
+msgstr ""
+
+# 03d202dd69344ec29018e4cfa4b8ac45
+#: ../../contribute.rst:160
+msgid "Then plug your new targets in the generic targets::"
+msgstr ""
+
+# e1bc0e6994d044eaa4b8dd26d1f7869c
+#: ../../contribute.rst:170
+msgid ""
+"This last command refreshed the .pot (strings index) and created the .po "
+"(translation) files. You can now add your translation in the .po files in "
+"``source/translated/<your language code>/``. Here is an example of "
+"translated content::"
+msgstr ""
+
+# 7cae1cb1b219462db89c9815d2b19db7
+#: ../../contribute.rst:189
+msgid ""
+"Verify your translation pointing a web browser to your local directory. When "
+"satisfied, ``git add`` and ``git commit`` your touched files (don't track "
+"the .mo and html files), and submit your commits using the procedures "
+"described in the previous chapters."
+msgstr ""
 
 # 5577725b27c843e985c7d48c2ad4595f
 #: ../../contribute.rst:50
@@ -107,6 +189,6 @@ msgid "With msmtp, with git send-email"
 msgstr "Avec msmtp, avec git send-email"
 
 # 9ae5bca46e9e410e92e8d4b848790a92
-#: ../../contribute.rst:85
+#: ../../contribute.rst:87
 msgid "With msmtp, without git send-email"
 msgstr "Avec msmtp, sans git send-email"
