--- a/source/translated/fr/virtualization.po
+++ b/source/translated/fr/virtualization.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2012-07-23 15:36+01\n"
 "Last-Translator: Christophe Varoqui <christophe.varoqui@opensvc.com>\n"
 "Language-Team: OpenSVC translation team <translation@opensvc.com>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
